# mini-raytracer

./: .gitignore  CMakeLists.txt  README.md
include/: AmbientLight.hpp  DirectionalLight.hpp  Group.hpp  HitRecord.hpp  Image.hpp  Light.hpp  Material.hpp  Plane.hpp  PointLight.hpp  Ray.hpp  Scene.hpp  Sphere.hpp  Surface.hpp  Vector3.hpp
lib/: AmbientLight.cpp  CMakeLists.txt  DirectionalLight.cpp  Group.cpp  HitRecord.cpp  Image.cpp  Material.cpp  Plane.cpp  PointLight.cpp  Ray.cpp  Scene.cpp  Sphere.cpp  Surface.cpp  Vector3.cpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  RayTest.cpp  SphereTest.cpp  Vector3Test.cpp
